# emerge

./: .gitignore  BENCHMARK_REFACTOR_TRACKER.md  CLAUDE.md  CODEX_BENCHMARK_REFACTOR_PROMPTS.md  Makefile  README.md  experiment_toolkit.py  experiments.yaml  main.py  pyproject.toml  run_batch.py  run_benchmark.py  run_evolution.py  start.sh  tree.json
UI/: index.html  package-lock.json  package.json  vite.config.ts
benchmarks/: Plan.md  scarcity_v1.yaml
blog/: README.md  quartz.config.ts
dashboard/: __init__.py  evolution_dashboard.py
docs/: experiment-toolkit-guide.md
server/: event_bus.py  run_server.py  server.py
simulation/: __init__.py  agent.py  audit_compare.py  audit_recorder.py  benchmark_report.py  benchmark_suite.py  cohort_analyzer.py  config.py  day_cycle.py  decision_builder.py  ebs_builder.py  engine.py  event_emitter.py  experiment_compare.py  experiment_loader.py  experiment_policy.py  experiment_prioritizer.py  experiment_schemas.py  inventory.py  language.py  lineage.py  llm_client.py  memory.py  message.py  metrics_builder.py  oracle.py  personality.py  planner.py  planning_state.py  prompt_loader.py  prompt_surface.py  relationship.py  retrieval.py  runtime_policy.py  runtime_profiles.py  runtime_settings.py  scarcity.py  scarcity_metrics.py  schemas.py  sim_logger.py  (+5 more)
tests/: test_agent_planning.py  test_agent_prompts.py  test_agent_runtime_capabilities.py  test_anomaly_detector.py  test_audit.py  test_behavior_segmenter.py  test_benchmark_expander.py  test_benchmark_report.py  test_benchmark_runner.py  test_benchmark_schema.py  (+71 more)
(+237 files in other folders)
