[project]
name = "emerge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "opensimplex>=0.4",
    "wandb>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
