[project]
name = "emerge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "opensimplex>=0.4",
    "wandb>=0.25.0",
    "streamlit>=1.40.0",
    "plotly>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
